# IReflx

./: .gitignore  CMakeLists.txt  README.md
IReflx/: CMakeLists.txt  main.cpp
IReflx/include/IReflx/: CommandLineParser.h
IReflx/src/: BaseIOInterface.cpp  BaseIOInterface.h  CommandLineParser.cpp  GmtiReader.cpp  IStarReflextor.cpp  IStarReflextor.h  SourceReader.cpp  SourceReader.h  UdpData.cpp  UdpData.h  UdpSender.cpp
LibIReflx/: BaseIOInterface.h  BoundedBuffer.h  CMakeLists.txt  CommandLineParser.cpp  GmtiReader.cpp  GmtiReader.h  IStarReflextor.h  SourceReader.cpp  StdinReader.cpp  StdinReader.h  UdpData.cpp  UdpData.h  UdpListener.cpp  UdpListener.h  UdpSender.cpp  UdpSender.h
src/: main.cpp
